--- a/Discover City's/View/HistoryController.xib
+++ b/Discover City's/View/HistoryController.xib
@@ -18,7 +18,7 @@
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="u2w-K9-nGV">
                         <rect key="frame" x="10" y="44" width="394" height="808"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9Qq-T3-Eqo">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="x" translatesAutoresizingMaskIntoConstraints="NO" id="9Qq-T3-Eqo">
                                 <rect key="frame" x="0.0" y="0.0" width="394" height="325"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NYB-ck-mPh" customClass="CLTypingLabel" customModule="CLTypingLabel">
@@ -65,6 +65,7 @@
     </objects>
     <resources>
         <image name="Buttonbackground" width="600" height="306"/>
+        <image name="x" width="16" height="16"/>
         <namedColor name="Color">
             <color red="0.73299998044967651" green="0.88200002908706665" blue="0.98000001907348633" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
