--- a/Discover City's/View/MapsController.xib
+++ b/Discover City's/View/MapsController.xib
@@ -2,14 +2,16 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <viewController id="6qL-ck-LIb" customClass="MapsController" customModule="DiscoverCity" customModuleProvider="target">
+        <viewController id="6qL-ck-LIb" customClass="MapsController" customModule="Discover_City" customModuleProvider="target">
             <view key="view" contentMode="scaleToFill" id="gvp-Px-ner">
                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -17,29 +19,62 @@
                     <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Hkb-He-0r2">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                     </mapView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Destination" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BrQ-eh-o0a" customClass="CLTypingLabel" customModule="CLTypingLabel">
-                        <rect key="frame" x="207" y="94" width="0.0" height="0.0"/>
-                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                        <color key="textColor" red="0.87450980389999999" green="0.52156862749999999" blue="0.26274509800000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="h9U-cr-heN">
+                        <rect key="frame" x="87" y="762" width="240" height="80"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Destination" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BrQ-eh-o0a" customClass="CLTypingLabel" customModule="CLTypingLabel">
+                                <rect key="frame" x="8" y="8" width="224" height="29"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <color key="textColor" red="0.87450980389999999" green="0.52156862749999999" blue="0.26274509800000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Estimeted time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cCj-u7-ic1" customClass="CLTypingLabel" customModule="CLTypingLabel">
+                                <rect key="frame" x="8" y="43" width="224" height="29"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="29" id="GNb-uR-umi"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <color key="textColor" red="0.87450980389999999" green="0.52156862749999999" blue="0.26274509800000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" name="Color"/>
+                        <constraints>
+                            <constraint firstItem="BrQ-eh-o0a" firstAttribute="top" secondItem="h9U-cr-heN" secondAttribute="topMargin" id="E5K-dE-CGN"/>
+                            <constraint firstItem="cCj-u7-ic1" firstAttribute="bottom" secondItem="h9U-cr-heN" secondAttribute="bottomMargin" id="PG0-Vm-wrq"/>
+                            <constraint firstItem="cCj-u7-ic1" firstAttribute="leading" secondItem="h9U-cr-heN" secondAttribute="leading" constant="8" id="UAn-Es-LMg"/>
+                            <constraint firstAttribute="trailing" secondItem="cCj-u7-ic1" secondAttribute="trailing" constant="8" id="Ujk-hZ-vpR"/>
+                            <constraint firstAttribute="height" constant="80" id="V9z-QU-e9B"/>
+                            <constraint firstItem="BrQ-eh-o0a" firstAttribute="leading" secondItem="h9U-cr-heN" secondAttribute="leadingMargin" id="jX1-7o-ojx"/>
+                            <constraint firstAttribute="width" constant="240" id="oyl-5S-k7B"/>
+                            <constraint firstItem="BrQ-eh-o0a" firstAttribute="trailing" secondItem="h9U-cr-heN" secondAttribute="trailingMargin" id="slv-2L-ZIW"/>
+                            <constraint firstItem="cCj-u7-ic1" firstAttribute="top" secondItem="BrQ-eh-o0a" secondAttribute="bottom" constant="6" id="yhE-sX-av6"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="Hkb-He-0r2" secondAttribute="trailing" id="AFt-bN-Fv6"/>
                     <constraint firstAttribute="top" secondItem="Hkb-He-0r2" secondAttribute="top" id="THY-BO-WyX"/>
-                    <constraint firstItem="BrQ-eh-o0a" firstAttribute="top" secondItem="VVq-YG-vos" secondAttribute="top" constant="50" id="U5a-rT-b7h"/>
                     <constraint firstAttribute="leading" secondItem="Hkb-He-0r2" secondAttribute="leading" id="bsj-tn-BGq"/>
                     <constraint firstAttribute="bottom" secondItem="Hkb-He-0r2" secondAttribute="bottom" id="g8N-Aj-slJ"/>
-                    <constraint firstItem="BrQ-eh-o0a" firstAttribute="centerX" secondItem="gvp-Px-ner" secondAttribute="centerX" id="q8w-Rk-Brf"/>
+                    <constraint firstItem="h9U-cr-heN" firstAttribute="centerX" secondItem="gvp-Px-ner" secondAttribute="centerX" id="gGH-cF-fdD"/>
+                    <constraint firstItem="VVq-YG-vos" firstAttribute="bottom" secondItem="h9U-cr-heN" secondAttribute="bottom" constant="20" id="vhn-1d-iCd"/>
                 </constraints>
                 <viewLayoutGuide key="safeArea" id="VVq-YG-vos"/>
             </view>
             <connections>
                 <outlet property="destinationLabel" destination="BrQ-eh-o0a" id="NkO-pT-Dy7"/>
+                <outlet property="estimetedTime" destination="cCj-u7-ic1" id="3sg-6K-UVL"/>
                 <outlet property="mapView" destination="Hkb-He-0r2" id="CBu-GL-gxd"/>
+                <outlet property="titleView" destination="h9U-cr-heN" id="i7g-xy-f3O"/>
             </connections>
-            <point key="canvasLocation" x="419" y="-232"/>
+            <point key="canvasLocation" x="418.84057971014494" y="-232.36607142857142"/>
         </viewController>
     </objects>
+    <resources>
+        <namedColor name="Color">
+            <color red="0.73299998044967651" green="0.88200002908706665" blue="0.98000001907348633" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
