--- a/Discover City's/Custom View/How To Play/HowToController.xib
+++ b/Discover City's/Custom View/How To Play/HowToController.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -18,7 +19,7 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LlJ-9Z-11B">
                         <rect key="frame" x="40" y="84" width="334" height="738"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="bPP-5C-rY3">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="bPP-5C-rY3">
                                 <rect key="frame" x="20" y="20" width="294" height="591"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="zWn-vp-FQy">
@@ -35,12 +36,12 @@
                             </pageControl>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HPz-88-Vuy">
                                 <rect key="frame" x="20" y="688" width="294" height="30"/>
-                                <color key="backgroundColor" red="0.89019607840000003" green="0.1333333333" blue="0.28627450980000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" name="Button Color"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="erC-0B-h0J"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <state key="normal" title="Close"/>
                                 <connections>
                                     <action selector="closeButton:" destination="wXx-fk-OwI" eventType="touchUpInside" id="MPg-pz-V13"/>
@@ -62,7 +63,7 @@
                         </constraints>
                     </view>
                 </subviews>
-                <color key="backgroundColor" red="0.036012563854455948" green="0.071463115513324738" blue="0.065246902406215668" alpha="0.1504173801369863" colorSpace="custom" customColorSpace="sRGB"/>
+                <color key="backgroundColor" red="0.029290576050478329" green="0.058356357899111533" blue="0.053413249996027548" alpha="0.60126819349315064" colorSpace="custom" customColorSpace="sRGB"/>
                 <constraints>
                     <constraint firstItem="iVk-uz-3X0" firstAttribute="bottom" secondItem="LlJ-9Z-11B" secondAttribute="bottom" constant="40" id="1lS-l2-emb"/>
                     <constraint firstItem="LlJ-9Z-11B" firstAttribute="top" secondItem="iVk-uz-3X0" secondAttribute="top" constant="40" id="MbQ-lU-wSw"/>
@@ -80,4 +81,9 @@
             <point key="canvasLocation" x="-126.08695652173914" y="30.803571428571427"/>
         </viewController>
     </objects>
+    <resources>
+        <namedColor name="Button Color">
+            <color red="0.90499997138977051" green="0.90499997138977051" blue="0.90499997138977051" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
