--- a/Discover City's/Custom View/Table View Cell/TableSelectionCell.xib
+++ b/Discover City's/Custom View/Table View Cell/TableSelectionCell.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -19,17 +20,18 @@
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="36W-sl-19r">
                         <rect key="frame" x="20" y="13" width="324" height="18"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="15"/>
-                        <nil key="textColor"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrow.right" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="00D-iU-lhy">
-                        <rect key="frame" x="364" y="9.5" width="30" height="25"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrow" translatesAutoresizingMaskIntoConstraints="NO" id="00D-iU-lhy">
+                        <rect key="frame" x="364" y="7" width="30" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="2Qi-6u-Y81"/>
                             <constraint firstAttribute="width" constant="30" id="noP-xZ-kof"/>
                         </constraints>
                     </imageView>
                 </subviews>
+                <color key="backgroundColor" name="Button Color"/>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="00D-iU-lhy" secondAttribute="trailing" constant="20" id="1QL-9f-f9G"/>
                     <constraint firstItem="00D-iU-lhy" firstAttribute="leading" secondItem="36W-sl-19r" secondAttribute="trailing" constant="20" id="5Zh-Cl-beg"/>
@@ -45,6 +47,9 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="arrow.right" catalog="system" width="64" height="48"/>
+        <image name="arrow" width="24" height="24"/>
+        <namedColor name="Button Color">
+            <color red="0.90515942258883253" green="0.90515942258883253" blue="0.90515942258883253" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
