--- a/Discover City's/View/AreaController.xib
+++ b/Discover City's/View/AreaController.xib
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -12,46 +13,45 @@
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <viewController id="2jb-1a-cf6" customClass="AreaController" customModule="Discover_City" customModuleProvider="target">
             <view key="view" contentMode="scaleToFill" id="8Lo-Fl-bCT">
-                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="qL5-JW-S1g">
-                        <rect key="frame" x="10" y="44" width="394" height="798"/>
-                        <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="citySunny" translatesAutoresizingMaskIntoConstraints="NO" id="DRr-mm-LvZ">
-                                <rect key="frame" x="0.0" y="0.0" width="394" height="300"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="300" id="kju-QG-8kG"/>
-                                </constraints>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Where do you want to play in city?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aUC-QV-PoH" customClass="CLTypingLabel" customModule="CLTypingLabel">
-                                <rect key="frame" x="0.0" y="320" width="394" height="100"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="100" id="V5f-5F-xHX"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
-                                <color key="textColor" red="0.1058823529" green="0.14901960780000001" blue="0.17254901959999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" pagingEnabled="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="9KJ-Ru-fGn">
-                                <rect key="frame" x="0.0" y="440" width="394" height="358"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <color key="tintColor" red="0.87450980389999999" green="0.52156862749999999" blue="0.26274509800000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="336" id="RfG-ar-pVT"/>
-                                </constraints>
-                                <color key="separatorColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <color key="sectionIndexColor" red="0.87450980389999999" green="0.52156862749999999" blue="0.26274509800000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                            </tableView>
-                        </subviews>
-                    </stackView>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="citySunny" translatesAutoresizingMaskIntoConstraints="NO" id="DRr-mm-LvZ">
+                        <rect key="frame" x="20" y="20" width="335" height="200"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="200" id="kju-QG-8kG"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Where do you want to play in city?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aUC-QV-PoH">
+                        <rect key="frame" x="20" y="240" width="335" height="100"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="100" id="V5f-5F-xHX"/>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="280" id="hnD-60-YLj"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" pagingEnabled="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="9KJ-Ru-fGn">
+                        <rect key="frame" x="20" y="360" width="335" height="287"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="tintColor" red="0.87450980389999999" green="0.52156862749999999" blue="0.26274509800000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="separatorColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="sectionIndexColor" red="0.87450980389999999" green="0.52156862749999999" blue="0.26274509800000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                    </tableView>
                 </subviews>
-                <color key="backgroundColor" name="Color"/>
+                <color key="backgroundColor" name="View Background Color"/>
                 <constraints>
-                    <constraint firstItem="qL5-JW-S1g" firstAttribute="top" secondItem="1al-Om-6so" secondAttribute="top" id="0FA-SG-w4m"/>
-                    <constraint firstItem="1al-Om-6so" firstAttribute="bottom" secondItem="qL5-JW-S1g" secondAttribute="bottom" constant="20" id="Lhf-z4-AjL"/>
-                    <constraint firstAttribute="leading" secondItem="qL5-JW-S1g" secondAttribute="leading" constant="-10" id="Wua-es-gAB"/>
-                    <constraint firstAttribute="trailing" secondItem="qL5-JW-S1g" secondAttribute="trailing" constant="10" id="hTO-Dz-RwF"/>
+                    <constraint firstItem="1al-Om-6so" firstAttribute="trailing" secondItem="DRr-mm-LvZ" secondAttribute="trailing" constant="20" id="1rX-5d-yBW"/>
+                    <constraint firstItem="9KJ-Ru-fGn" firstAttribute="leading" secondItem="1al-Om-6so" secondAttribute="leading" constant="20" id="9Fr-wP-Bjx"/>
+                    <constraint firstItem="1al-Om-6so" firstAttribute="trailing" secondItem="aUC-QV-PoH" secondAttribute="trailing" constant="20" id="K5X-l8-s6o"/>
+                    <constraint firstItem="1al-Om-6so" firstAttribute="trailing" secondItem="9KJ-Ru-fGn" secondAttribute="trailing" constant="20" id="Uj4-Lz-033"/>
+                    <constraint firstItem="9KJ-Ru-fGn" firstAttribute="bottom" secondItem="1al-Om-6so" secondAttribute="bottom" constant="-20" id="aqk-My-Ov9"/>
+                    <constraint firstItem="aUC-QV-PoH" firstAttribute="top" secondItem="DRr-mm-LvZ" secondAttribute="bottom" constant="20" id="ha9-iV-7h0"/>
+                    <constraint firstItem="aUC-QV-PoH" firstAttribute="leading" secondItem="1al-Om-6so" secondAttribute="leading" constant="20" id="qqF-r9-Y9H"/>
+                    <constraint firstItem="DRr-mm-LvZ" firstAttribute="leading" secondItem="1al-Om-6so" secondAttribute="leading" constant="20" id="r2O-WX-aVm"/>
+                    <constraint firstItem="DRr-mm-LvZ" firstAttribute="top" secondItem="1al-Om-6so" secondAttribute="top" constant="20" id="uZB-b8-dlx"/>
+                    <constraint firstItem="9KJ-Ru-fGn" firstAttribute="top" secondItem="aUC-QV-PoH" secondAttribute="bottom" constant="20" id="uj8-Nw-Imb"/>
                 </constraints>
                 <viewLayoutGuide key="safeArea" id="1al-Om-6so"/>
             </view>
@@ -64,8 +64,8 @@
     </objects>
     <resources>
         <image name="citySunny" width="800" height="370"/>
-        <namedColor name="Color">
-            <color red="0.73299998044967651" green="0.88200002908706665" blue="0.98000001907348633" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <namedColor name="View Background Color">
+            <color red="0.59604488218753171" green="0.55015124145569416" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
