--- a/Discover City's/View/HistoryController.xib
+++ b/Discover City's/View/HistoryController.xib
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -16,29 +17,29 @@
                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="u2w-K9-nGV">
-                        <rect key="frame" x="10" y="44" width="394" height="808"/>
+                        <rect key="frame" x="10" y="54" width="394" height="798"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="x" translatesAutoresizingMaskIntoConstraints="NO" id="9Qq-T3-Eqo">
-                                <rect key="frame" x="0.0" y="0.0" width="394" height="325"/>
+                                <rect key="frame" x="0.0" y="0.0" width="394" height="315"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NYB-ck-mPh" customClass="CLTypingLabel" customModule="CLTypingLabel">
-                                <rect key="frame" x="0.0" y="350" width="394" height="383"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NYB-ck-mPh">
+                                <rect key="frame" x="0.0" y="340" width="394" height="383"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="383" id="WDN-lf-up6"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uzP-Bz-G3h">
-                                <rect key="frame" x="0.0" y="758" width="394" height="50"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <rect key="frame" x="0.0" y="748" width="394" height="50"/>
+                                <color key="backgroundColor" name="Button Color"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="kRH-eT-zs5"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Next" backgroundImage="Buttonbackground">
-                                    <color key="titleColor" red="0.87450980389999999" green="0.52156862749999999" blue="0.26274509800000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <state key="normal" title="Next">
+                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                 </state>
                                 <connections>
                                     <action selector="nextPressed:" destination="215-W3-bvW" eventType="touchUpInside" id="DuE-8d-aS0"/>
@@ -47,27 +48,30 @@
                         </subviews>
                     </stackView>
                 </subviews>
-                <color key="backgroundColor" name="Color"/>
+                <color key="backgroundColor" name="View Background Color"/>
                 <constraints>
                     <constraint firstItem="KMX-ua-QL9" firstAttribute="bottom" secondItem="u2w-K9-nGV" secondAttribute="bottom" constant="10" id="TUF-Mb-IAE"/>
                     <constraint firstItem="KMX-ua-QL9" firstAttribute="trailing" secondItem="u2w-K9-nGV" secondAttribute="trailing" constant="10" id="fiU-R4-Cj2"/>
                     <constraint firstItem="u2w-K9-nGV" firstAttribute="leading" secondItem="KMX-ua-QL9" secondAttribute="leading" constant="10" id="qFO-eA-6bl"/>
-                    <constraint firstItem="u2w-K9-nGV" firstAttribute="top" secondItem="KMX-ua-QL9" secondAttribute="top" id="uWy-nL-i55"/>
+                    <constraint firstItem="u2w-K9-nGV" firstAttribute="top" secondItem="KMX-ua-QL9" secondAttribute="top" constant="10" id="uWy-nL-i55"/>
                 </constraints>
                 <viewLayoutGuide key="safeArea" id="KMX-ua-QL9"/>
             </view>
             <connections>
                 <outlet property="historyLabel" destination="NYB-ck-mPh" id="35j-PV-8EV"/>
                 <outlet property="imageView" destination="9Qq-T3-Eqo" id="qqx-dL-Wca"/>
+                <outlet property="outletButton" destination="uzP-Bz-G3h" id="Uh7-YL-zBn"/>
             </connections>
             <point key="canvasLocation" x="471.01449275362324" y="-269.19642857142856"/>
         </viewController>
     </objects>
     <resources>
-        <image name="Buttonbackground" width="600" height="306"/>
         <image name="x" width="16" height="16"/>
-        <namedColor name="Color">
-            <color red="0.73299998044967651" green="0.88200002908706665" blue="0.98000001907348633" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <namedColor name="Button Color">
+            <color red="0.90499997138977051" green="0.90499997138977051" blue="0.90499997138977051" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="View Background Color">
+            <color red="0.59604488218753171" green="0.55015124145569416" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
