--- a/Discover City's/View/QuestionController.xib
+++ b/Discover City's/View/QuestionController.xib
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -10,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <viewController id="JUu-kT-zLE" customClass="QuestionController" customModule="DiscoverCity" customModuleProvider="target">
+        <viewController id="JUu-kT-zLE" customClass="QuestionController" customModule="Discover_City" customModuleProvider="target">
             <view key="view" contentMode="scaleToFill" id="uRH-m6-B7X">
                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -29,17 +30,17 @@
                                         <constraints>
                                             <constraint firstAttribute="height" constant="90" id="f6H-f4-Kgn"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="question" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2uU-3v-HtM" customClass="CLTypingLabel" customModule="CLTypingLabel">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="question" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2uU-3v-HtM">
                                         <rect key="frame" x="0.0" y="496" width="394" height="90"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="90" id="tzB-o9-ncL"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
@@ -52,12 +53,13 @@
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="AnswerA" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Et4-wx-mO1">
                                         <rect key="frame" x="0.0" y="0.0" width="394" height="50"/>
+                                        <color key="backgroundColor" name="Button Color"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="qqQ-eb-Vm2"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                        <state key="normal" title="Button" backgroundImage="Buttonbackground">
-                                            <color key="titleColor" red="0.87450980389999999" green="0.52156862749999999" blue="0.26274509800000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <state key="normal" title="Button">
+                                            <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                         </state>
                                         <connections>
                                             <action selector="buttonPressed:" destination="JUu-kT-zLE" eventType="touchUpInside" id="Vlp-68-R2Y"/>
@@ -65,12 +67,13 @@
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="AnswerB" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BEc-eb-wU7">
                                         <rect key="frame" x="0.0" y="58" width="394" height="50"/>
+                                        <color key="backgroundColor" name="Button Color"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="HU1-vS-UXr"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                        <state key="normal" title="Button" backgroundImage="Buttonbackground">
-                                            <color key="titleColor" red="0.87450980389999999" green="0.52156862749999999" blue="0.26274509800000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <state key="normal" title="Button">
+                                            <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                         </state>
                                         <connections>
                                             <action selector="buttonPressed:" destination="JUu-kT-zLE" eventType="touchUpInside" id="eY0-g3-pCT"/>
@@ -78,12 +81,13 @@
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="AnswerC" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KMb-Mh-Jru">
                                         <rect key="frame" x="0.0" y="116" width="394" height="50"/>
+                                        <color key="backgroundColor" name="Button Color"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="OPB-z5-RYC"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                        <state key="normal" title="Button" backgroundImage="Buttonbackground">
-                                            <color key="titleColor" red="0.87450980389999999" green="0.52156862749999999" blue="0.26274509800000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <state key="normal" title="Button">
+                                            <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                         </state>
                                         <connections>
                                             <action selector="buttonPressed:" destination="JUu-kT-zLE" eventType="touchUpInside" id="RH4-lp-CSJ"/>
@@ -91,12 +95,13 @@
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="AnswerD" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7La-uI-Ele">
                                         <rect key="frame" x="0.0" y="174" width="394" height="50"/>
+                                        <color key="backgroundColor" name="Button Color"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="RRB-NX-V2v"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                        <state key="normal" title="Button" backgroundImage="Buttonbackground">
-                                            <color key="titleColor" red="0.87450980389999999" green="0.52156862749999999" blue="0.26274509800000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <state key="normal" title="Button">
+                                            <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                         </state>
                                         <connections>
                                             <action selector="buttonPressed:" destination="JUu-kT-zLE" eventType="touchUpInside" id="wV3-gW-Avw"/>
@@ -110,7 +115,7 @@
                         </subviews>
                     </stackView>
                 </subviews>
-                <color key="backgroundColor" name="Color"/>
+                <color key="backgroundColor" name="View Background Color"/>
                 <constraints>
                     <constraint firstItem="YDz-pm-Su9" firstAttribute="bottom" secondItem="SVx-U4-RNp" secondAttribute="bottom" constant="10" id="0fV-Ov-1F5"/>
                     <constraint firstAttribute="trailing" secondItem="SVx-U4-RNp" secondAttribute="trailing" constant="10" id="1Kz-wZ-hRr"/>
@@ -132,10 +137,12 @@
         </viewController>
     </objects>
     <resources>
-        <image name="Buttonbackground" width="600" height="306"/>
         <image name="camera" catalog="system" width="64" height="48"/>
-        <namedColor name="Color">
-            <color red="0.73299998044967651" green="0.88200002908706665" blue="0.98000001907348633" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <namedColor name="Button Color">
+            <color red="0.90499997138977051" green="0.90499997138977051" blue="0.90499997138977051" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="View Background Color">
+            <color red="0.59604488218753171" green="0.55015124145569416" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
