--- a/Discover City's/View/ScoreController.xib
+++ b/Discover City's/View/ScoreController.xib
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -21,23 +22,24 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="successful" translatesAutoresizingMaskIntoConstraints="NO" id="8Lc-yf-Yal">
                                 <rect key="frame" x="0.0" y="0.0" width="394" height="469"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Success Screen" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="13" translatesAutoresizingMaskIntoConstraints="NO" id="zE7-nj-sHh" customClass="CLTypingLabel" customModule="CLTypingLabel">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Success Screen" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="13" translatesAutoresizingMaskIntoConstraints="NO" id="zE7-nj-sHh">
                                 <rect key="frame" x="0.0" y="477" width="394" height="100"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="qa2-U9-KZD"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="26"/>
-                                <color key="textColor" red="0.1058823529" green="0.14901960780000001" blue="0.17254901959999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yiu-f3-scO">
                                 <rect key="frame" x="0.0" y="585" width="394" height="50"/>
+                                <color key="backgroundColor" name="Button Color"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="0dy-vv-UtQ"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Retry" backgroundImage="Buttonbackground">
-                                    <color key="titleColor" red="0.87450980389999999" green="0.52156862749999999" blue="0.26274509800000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <state key="normal" title="Retry">
+                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                 </state>
                                 <connections>
                                     <action selector="buttonPressed:" destination="kr7-xa-nPz" eventType="touchUpInside" id="WIi-HC-NiF"/>
@@ -45,12 +47,13 @@
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yuN-M0-MUn">
                                 <rect key="frame" x="0.0" y="643" width="394" height="50"/>
+                                <color key="backgroundColor" name="Button Color"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="XcG-0B-uA4"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Exit" backgroundImage="Buttonbackground">
-                                    <color key="titleColor" red="0.87450980389999999" green="0.52156862749999999" blue="0.26274509800000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <state key="normal" title="Exit">
+                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                 </state>
                                 <connections>
                                     <action selector="buttonPressed:" destination="kr7-xa-nPz" eventType="touchUpInside" id="qVn-A1-ajz"/>
@@ -59,7 +62,7 @@
                         </subviews>
                     </stackView>
                 </subviews>
-                <color key="backgroundColor" name="Color"/>
+                <color key="backgroundColor" name="View Background Color"/>
                 <constraints>
                     <constraint firstItem="YgG-lA-bzP" firstAttribute="leading" secondItem="tTP-kd-Qtv" secondAttribute="leading" constant="10" id="CAA-DI-tCu"/>
                     <constraint firstItem="tTP-kd-Qtv" firstAttribute="trailing" secondItem="YgG-lA-bzP" secondAttribute="trailing" constant="10" id="JOq-E8-Cva"/>
@@ -69,16 +72,20 @@
                 <viewLayoutGuide key="safeArea" id="tTP-kd-Qtv"/>
             </view>
             <connections>
+                <outlet property="exitButtonOutlet" destination="yuN-M0-MUn" id="PMZ-Jq-7jz"/>
+                <outlet property="retryButtonOutlet" destination="Yiu-f3-scO" id="A20-wO-lUk"/>
                 <outlet property="scoreScreenLabel" destination="zE7-nj-sHh" id="N5d-DQ-LL5"/>
             </connections>
             <point key="canvasLocation" x="160.86956521739131" y="77.678571428571431"/>
         </viewController>
     </objects>
     <resources>
-        <image name="Buttonbackground" width="600" height="306"/>
         <image name="successful" width="500" height="508"/>
-        <namedColor name="Color">
-            <color red="0.73299998044967651" green="0.88200002908706665" blue="0.98000001907348633" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <namedColor name="Button Color">
+            <color red="0.90499997138977051" green="0.90499997138977051" blue="0.90499997138977051" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="View Background Color">
+            <color red="0.59604488218753171" green="0.55015124145569416" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
