--- a/Discover City's/View/HistoryController.xib
+++ b/Discover City's/View/HistoryController.xib
@@ -71,7 +71,7 @@
             <color red="0.90499997138977051" green="0.90499997138977051" blue="0.90499997138977051" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="View Background Color">
-            <color red="0.59604488218753171" green="0.55015124145569416" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.43500000238418579" green="0.35600000619888306" blue="0.84299999475479126" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
