--- a/Discover City's/Custom View/Donate/DonateController.xib
+++ b/Discover City's/Custom View/Donate/DonateController.xib
@@ -31,8 +31,8 @@
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Do you wanna order something to me?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="eOQ-xH-Mu7">
                                         <rect key="frame" x="8" y="8" width="224" height="93"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="mWs-Xl-GkR">
@@ -51,11 +51,11 @@
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A coffee just for 1$" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="70A-A0-9wR">
                                                         <rect key="frame" x="89" y="17" width="127" height="76"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                        <nil key="textColor"/>
+                                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                 </subviews>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstItem="BLE-Zw-RI9" firstAttribute="centerY" secondItem="DfB-se-wcV" secondAttribute="centerY" id="EBJ-O3-EUP"/>
                                                     <constraint firstItem="70A-A0-9wR" firstAttribute="leading" secondItem="BLE-Zw-RI9" secondAttribute="trailing" constant="21" id="EsN-gG-Js1"/>
@@ -79,11 +79,11 @@
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A burger just for 5$" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="alG-gj-XDf">
                                                         <rect key="frame" x="89" y="17" width="127" height="76"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                        <nil key="textColor"/>
+                                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                 </subviews>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstItem="alG-gj-XDf" firstAttribute="top" secondItem="CVm-ms-bgd" secondAttribute="top" constant="17" id="0sa-T6-HhW"/>
                                                     <constraint firstItem="alG-gj-XDf" firstAttribute="trailing" secondItem="CVm-ms-bgd" secondAttribute="trailingMargin" id="49I-UD-q9x"/>
@@ -107,11 +107,11 @@
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A burger menu just for 10$" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ioU-h1-GSt">
                                                         <rect key="frame" x="89" y="17" width="127" height="76"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                        <nil key="textColor"/>
+                                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                 </subviews>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstItem="ioU-h1-GSt" firstAttribute="leading" secondItem="Ejc-tO-ahC" secondAttribute="trailing" constant="21" id="C3S-xG-aRM"/>
                                                     <constraint firstItem="ioU-h1-GSt" firstAttribute="centerY" secondItem="6dV-DR-d5A" secondAttribute="centerY" id="LDc-5C-53A"/>
@@ -125,7 +125,7 @@
                                         </subviews>
                                     </stackView>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="eOQ-xH-Mu7" secondAttribute="trailing" constant="8" id="Bub-mV-BMw"/>
                                     <constraint firstAttribute="bottom" secondItem="mWs-Xl-GkR" secondAttribute="bottom" constant="8" id="Sg5-0Y-NFd"/>
@@ -137,7 +137,7 @@
                                 </constraints>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="B3y-cw-xWL" firstAttribute="top" secondItem="puL-4v-kOV" secondAttribute="bottom" constant="10" id="00p-8o-lZ5"/>
                             <constraint firstItem="puL-4v-kOV" firstAttribute="top" secondItem="KG8-Y2-yg5" secondAttribute="top" constant="20" id="16U-Rj-oyM"/>
@@ -153,11 +153,11 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="x" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e9P-aH-Z79">
                                 <rect key="frame" x="8" y="2.5" width="9" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="25" id="8WU-fg-fwA"/>
                             <constraint firstItem="e9P-aH-Z79" firstAttribute="centerX" secondItem="CBs-e4-DKi" secondAttribute="centerX" id="Czg-9O-bqj"/>
