--- a/Discover City's/Custom View/How To Play/Cell/HowToCollectionViewCell.xib
+++ b/Discover City's/Custom View/How To Play/Cell/HowToCollectionViewCell.xib
@@ -17,11 +17,11 @@
                 <rect key="frame" x="0.0" y="0.0" width="578" height="972"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sun" translatesAutoresizingMaskIntoConstraints="NO" id="Qj2-bf-rLy">
-                        <rect key="frame" x="214" y="50" width="150" height="150"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="score" translatesAutoresizingMaskIntoConstraints="NO" id="Qj2-bf-rLy">
+                        <rect key="frame" x="229" y="20" width="120" height="200"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="150" id="RRK-Fd-ljh"/>
-                            <constraint firstAttribute="height" constant="150" id="icN-aH-3Kt"/>
+                            <constraint firstAttribute="width" constant="120" id="RRK-Fd-ljh"/>
+                            <constraint firstAttribute="height" constant="200" id="icN-aH-3Kt"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -29,26 +29,26 @@
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ipb-SZ-GoF">
-                        <rect key="frame" x="20" y="320" width="538" height="602"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="Ipb-SZ-GoF">
+                        <rect key="frame" x="20" y="340" width="538" height="582"/>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                        <nil key="textColor"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cWD-GK-GlK">
-                        <rect key="frame" x="20" y="250" width="538" height="40"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="cWD-GK-GlK">
+                        <rect key="frame" x="20" y="270" width="538" height="40"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="40" id="xl4-Ud-4gx"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                        <nil key="textColor"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
                     <constraint firstItem="cWD-GK-GlK" firstAttribute="top" secondItem="Qj2-bf-rLy" secondAttribute="bottom" constant="50" id="5Np-30-b2G"/>
                     <constraint firstAttribute="bottom" secondItem="Ipb-SZ-GoF" secondAttribute="bottom" constant="50" id="GzY-xv-2a0"/>
-                    <constraint firstItem="Qj2-bf-rLy" firstAttribute="top" secondItem="T6v-je-PSN" secondAttribute="top" constant="50" id="J25-Ek-lOV"/>
+                    <constraint firstItem="Qj2-bf-rLy" firstAttribute="top" secondItem="T6v-je-PSN" secondAttribute="top" constant="20" id="J25-Ek-lOV"/>
                     <constraint firstAttribute="trailing" secondItem="cWD-GK-GlK" secondAttribute="trailing" constant="20" id="YfE-QU-rRc"/>
                     <constraint firstAttribute="trailing" secondItem="Ipb-SZ-GoF" secondAttribute="trailing" constant="20" symbolic="YES" id="daR-55-KI2"/>
                     <constraint firstItem="cWD-GK-GlK" firstAttribute="leading" secondItem="T6v-je-PSN" secondAttribute="leading" constant="20" id="g9i-Gf-f9j"/>
@@ -68,6 +68,6 @@
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="sun" width="512" height="512"/>
+        <image name="score" width="1125" height="2436"/>
     </resources>
 </document>
