--- a/Discover City's/View/CityController.xib
+++ b/Discover City's/View/CityController.xib
@@ -64,7 +64,7 @@
     <resources>
         <image name="cityBlack" width="5746" height="1513"/>
         <namedColor name="View Background Color">
-            <color red="0.59604488218753171" green="0.55015124145569416" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.43500000238418579" green="0.35600000619888306" blue="0.84299999475479126" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
